# magi-code

./: .eslintrc.cjs  .gitignore  .vscodeignore  AGENTS.md  CHAT_UI_REDESIGN_PROPOSAL.md  CLEANUP_ANALYSIS.md  CLEANUP_REPORT.md  CLI_QUESTION_DUPLICATE_FIX.md  CLI_QUESTION_EVENT_FLOW_REVIEW.md  CLI_QUESTION_TEST_GUIDE.md  CODE_REVIEW_REPORT.md  COMPLETE_SUMMARY.md  CONFIG_GUIDE.md  CONSOLE_LOG_MIGRATION_CHECK.md  Cargo.toml  FINAL_CLEANUP_VERIFICATION.md  FIXES_APPLIED.md  FIXLIST.md  HOW_TO_TEST_WEBVIEW.md  IMPLEMENTATION_PLAN.md  ISSUES_PROGRESS.md  LAYOUT_FIX_REPORT.md  LICENSE  LOGGING_SYSTEM_MIGRATION_COMPLETE.md  MESSAGE_FLOW_COMPLETE_REPORT.md  MESSAGE_FLOW_FIX_SUMMARY.md  MESSAGE_FLOW_ISSUES_FIX.md  Node.js  PANEL_DESIGN_ENHANCEMENT.md  PHASE_1_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  QUICK_TEST_GUIDE.md  README.en.md  README.md  README_EN.md  REFACTORING_RECOMMENDATIONS.md  REFACTOR_SUMMARY.md  SEARCH_AND_KEYBOARD_REMOVAL.md  (+74 more)
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/bootstrap/: index.html
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lifecycle.rs  main.rs
apps/desktop/tests/: lifecycle.rs  updater_acl.rs
crates/magi-api/: Cargo.toml
crates/magi-api/src/: a_path.rs  builtin_tool_schema.rs  change_projection.rs  dispatch_execution.rs  dto.rs  errors.rs  execution_chain_recovery.rs  git_tool_runtime.rs  host_paths.rs  lib.rs  mcp_config.rs  model_config.rs  prompt_utils.rs  public_canonical.rs  scope_binding.rs  session_continue.rs  session_title.rs  session_turn_execution.rs  session_turn_writeback.rs  settings_store.rs  shadow_execution.rs  skill_apply_tool.rs  skill_loader.rs  snapshot_lifecycle.rs  sse.rs  state.rs  task_dispatch.rs  task_execution.rs  task_llm_loop.rs  task_turn_finalize.rs  tool_result_utils.rs  tunnel.rs  usage_recording.rs
crates/magi-bridge-client/: Cargo.toml
crates/magi-bridge-client/src/: assignment_dispatch.rs  auto_compaction.rs  base_adapter.rs  cache_boundary.rs  clients.rs  conversation_compaction.rs  decision_engine.rs  dispatch.rs  execution_outcome.rs  final_text_policy.rs  http_model_client.rs  image_generation.rs  lib.rs  llm_types.rs  local_process_protocol.rs  mcp_client.rs  mcp_loopback.rs  micro_compaction.rs  mission_outcome.rs  model_loopback.rs  orchestrator_adapter.rs  orchestrator_termination.rs  round_policy.rs  structured_dispatch.rs  tests.rs  tool_concurrency.rs  transport.rs  types.rs  worker_adapter.rs  worker_duplicate_guard.rs
crates/magi-bridge-client/tests/: host_loopback.rs  mcp_loopback.rs  model_loopback.rs  round_policy_snapshots.rs
crates/magi-checkpoint/: Cargo.toml
crates/magi-checkpoint/src/: lib.rs
crates/magi-context-runtime/: Cargo.toml
crates/magi-context-runtime/src/: budgeting.rs  context_auxiliary.rs  execution_context.rs  knowledge_context.rs  layered_memory_store.rs  lib.rs  memory_document.rs  shared_context_pool.rs  snapshot.rs  source_assembly.rs  structured_output.rs
crates/magi-conversation-runtime/: Cargo.toml
crates/magi-conversation-runtime/src/: builtin_tool_schema.rs  context_reference.rs  conversation.rs  conversation_loop.rs  dispatch_submission.rs  driver.rs  execution_admission.rs  execution_chain_recovery.rs  lib.rs  mailbox.rs  mission_decomposition.rs  model_config.rs  model_context_window.rs  model_error.rs  prompt_reminder.rs  prompt_utils.rs  registry.rs  session_images.rs  session_thread.rs  session_turn_execution.rs  session_turn_finalize.rs  session_writeback.rs  settings_store.rs  skill_apply_tool.rs  skill_custom_tool_surface.rs  stream.rs  task_execution_dispatcher.rs  task_execution_registry.rs  task_graph_builder.rs  task_graph_replan.rs  task_helpers.rs  task_llm_loop.rs  task_runner.rs  task_runner_bridge.rs  task_runner_v2.rs  tool_batch.rs  tool_declared_paths.rs  tool_execution_ledger.rs  tool_result_utils.rs  tool_surface_state.rs  (+2 more)
crates/magi-conversation-runtime/templates/: workspace_context.md
crates/magi-conversation-runtime/tests/: lifecycle_notice_dispatch.rs  prompt_layout_snapshots.rs
crates/magi-daemon/: Cargo.toml
crates/magi-daemon/src/: daemon.rs  lib.rs
crates/magi-knowledge-store/: Cargo.toml
crates/magi-knowledge-store/src/: code_scanner.rs  code_tokenizer.rs  dependency_graph.rs  governed_output.rs  index_persistence.rs  indexer.rs  inverted_index.rs  lib.rs  local_search_engine.rs  min_heap.rs  normalization.rs  query.rs  query_expander.rs  result_ranker.rs  search_cache.rs  semantic_reranker.rs  source_model.rs  state.rs  symbol_index.rs  tests.rs  ts_symbol_extract.rs
crates/magi-lifecycle-notice/: Cargo.toml
crates/magi-lifecycle-notice/src/: lib.rs  notice_queue.rs  subscriber.rs  templates.rs
crates/magi-lifecycle-notice/templates/: human_checkpoint_approved.md  human_checkpoint_rejected.md  mission_resumed.md  plan_step_completed.md
crates/magi-mission/: Cargo.toml
crates/magi-mission-charter/: Cargo.toml
crates/magi-mission-charter/src/: lib.rs
crates/magi-mission-metrics/: Cargo.toml
crates/magi-mission-metrics/src/: lib.rs
crates/magi-mission/src/: lib.rs  tests.rs
crates/magi-mission/tests/: contract_round_trip.rs  metrics_round_trip.rs
crates/magi-orchestrator/: Cargo.toml
crates/magi-orchestrator/src/: control_plane.rs  execution_overview.rs  execution_runtime.rs  execution_writeback.rs  lib.rs  mission_engine.rs  orchestration_loop.rs  recovery_planner.rs  risk_policy.rs  task_runner.rs  task_store.rs  task_worker_catalog.rs  tests.rs  turn_diff_tracker.rs  verification_policy.rs  verification_runner.rs  worker_pipeline.rs
crates/magi-plan/: Cargo.toml
crates/magi-plan/src/: lib.rs
crates/magi-process/: Cargo.toml
crates/magi-process/src/: lib.rs
crates/magi-skill-runtime/: Cargo.toml
crates/magi-skill-runtime/src/: dispatch.rs  lib.rs  observation.rs  (+2 more)
crates/magi-snapshot/: Cargo.toml
crates/magi-todo-ledger/: Cargo.toml
crates/magi-tool-runtime/: Cargo.toml
crates/magi-worker-runtime/: Cargo.toml
(+1517 files in other folders)
