[workspace]
resolver = "2"
members = [
  "apps/daemon",
  "apps/desktop",
  "crates/magi-core",
  "crates/magi-process",
  "crates/magi-daemon",
  "crates/magi-api",
  "crates/magi-session-store",
  "crates/magi-workspace",
  "crates/magi-governance",
  "crates/magi-event-bus",
  "crates/magi-tool-runtime",
  "crates/magi-orchestrator",
  "crates/magi-worker-runtime",
  "crates/magi-knowledge-store",
  "crates/magi-memory-store",
  "crates/magi-context-runtime",
  "crates/magi-conversation-runtime",
  "crates/magi-skill-runtime",
  "crates/magi-bridge-client",
  "crates/magi-usage-authority",
  "crates/magi-runtime-state",
  "crates/magi-settings-store",
  "crates/magi-agent-role",
  "crates/magi-permissions",
  "crates/magi-safety-gate",
  "crates/magi-spawn-graph",
  "crates/magi-todo-ledger",
  "crates/magi-project-memory",
  "crates/magi-mission-metrics",
  "crates/magi-snapshot",
]

[workspace.package]
version = "3.0.8"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.6", features = ["json", "tokio", "http1"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "sync", "process", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
notify = "8"
sha2 = "0.10"
getrandom = "0.3"
zstd = "0.13"
ignore = "0.4"
insta = "1.41"
dunce = "1.0.5"

[profile.dev]
# 开发态只保留行号级调试信息，避免频繁 cargo run/check 后 target 目录快速膨胀。
debug = "line-tables-only"

[profile.test]
# 测试产物数量多，关闭增量缓存并降低调试信息，优先控制本地磁盘占用。
debug = "line-tables-only"
incremental = false
