[package]
name = "magi-daemon-app"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
magi-runtime-state = { path = "../../crates/magi-runtime-state" }
magi-daemon = { path = "../../crates/magi-daemon" }
magi-process = { path = "../../crates/magi-process" }
dirs = "6"
