[package]
name = "magi-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
reqwest.workspace = true
urlencoding = "2"
magi-core = { path = "../magi-core" }
magi-agent-role = { path = "../magi-agent-role" }
magi-bridge-client = { path = "../magi-bridge-client" }
magi-safety-gate = { path = "../magi-safety-gate" }
magi-spawn-graph = { path = "../magi-spawn-graph" }
magi-mission-metrics = { path = "../magi-mission-metrics" }
magi-conversation-runtime = { path = "../magi-conversation-runtime" }
magi-event-bus = { path = "../magi-event-bus" }
magi-governance = { path = "../magi-governance" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-memory-store = { path = "../magi-memory-store" }
magi-mission = { path = "../magi-mission" }
magi-orchestrator = { path = "../magi-orchestrator" }
magi-session-store = { path = "../magi-session-store" }
magi-snapshot = { path = "../magi-snapshot" }
magi-tool-runtime = { path = "../magi-tool-runtime" }
magi-usage-authority = { path = "../magi-usage-authority" }
magi-workspace = { path = "../magi-workspace" }
magi-skill-runtime = { version = "3.0.0", path = "../magi-skill-runtime" }
dirs = "6"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
magi-skill-runtime = { path = "../magi-skill-runtime" }
tempfile = "3"
