[package]
name = "magi-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
reqwest.workspace = true
urlencoding = "2"
magi-core = { path = "../magi-core" }
magi-agent-role = { path = "../magi-agent-role" }
magi-bridge-client = { path = "../magi-bridge-client" }
magi-safety-gate = { path = "../magi-safety-gate" }
magi-spawn-graph = { path = "../magi-spawn-graph" }
magi-mission-metrics = { path = "../magi-mission-metrics" }
magi-conversation-runtime = { path = "../magi-conversation-runtime" }
magi-event-bus = { path = "../magi-event-bus" }
magi-governance = { path = "../magi-governance" }
magi-git = { path = "../magi-git" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-memory-store = { path = "../magi-memory-store" }
magi-orchestrator = { path = "../magi-orchestrator" }
magi-process = { path = "../magi-process" }
magi-session-store = { path = "../magi-session-store" }
magi-settings-store = { path = "../magi-settings-store" }
magi-snapshot = { path = "../magi-snapshot" }
magi-plan = { path = "../magi-plan" }
magi-tool-runtime = { path = "../magi-tool-runtime" }
magi-usage-authority = { path = "../magi-usage-authority" }
magi-workspace = { path = "../magi-workspace" }
magi-skill-runtime = { version = "3.0.0", path = "../magi-skill-runtime" }
dirs = "6"
getrandom.workspace = true
sha2.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
magi-skill-runtime = { path = "../magi-skill-runtime" }
magi-worker-runtime = { path = "../magi-worker-runtime" }
tempfile = "3"
