[package]
name = "magi-bridge-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
magi-permissions = { path = "../magi-permissions" }
magi-process = { path = "../magi-process" }
magi-usage-authority = { path = "../magi-usage-authority" }
once_cell = "1"
regex = "1"
base64 = "0.22"
httpdate = "1"
