[package]
name = "magi-checkpoint"
version.workspace = true
edition.workspace = true

[dependencies]
magi-core = { path = "../magi-core" }
magi-event-bus = { path = "../magi-event-bus" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
