[package]
name = "magi-conversation-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
magi-core = { path = "../magi-core" }
magi-bridge-client = { path = "../magi-bridge-client" }
magi-context-runtime = { path = "../magi-context-runtime" }
magi-event-bus = { path = "../magi-event-bus" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-tool-runtime = { path = "../magi-tool-runtime" }
magi-orchestrator = { path = "../magi-orchestrator" }
magi-spawn-graph = { path = "../magi-spawn-graph" }
tokio.workspace = true
magi-safety-gate = { path = "../magi-safety-gate" }
magi-plan = { path = "../magi-plan" }
magi-project-memory = { path = "../magi-project-memory" }
magi-memory-store = { path = "../magi-memory-store" }
magi-mission-metrics = { path = "../magi-mission-metrics" }
magi-governance = { path = "../magi-governance" }
magi-git = { path = "../magi-git" }
magi-skill-runtime = { path = "../magi-skill-runtime" }
magi-permissions = { path = "../magi-permissions" }
magi-session-store = { path = "../magi-session-store" }
magi-settings-store = { path = "../magi-settings-store" }
magi-agent-role = { path = "../magi-agent-role" }
magi-snapshot = { path = "../magi-snapshot" }
magi-usage-authority = { path = "../magi-usage-authority" }
magi-worker-runtime = { path = "../magi-worker-runtime" }
magi-workspace = { path = "../magi-workspace" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sysinfo.workspace = true

[dev-dependencies]
insta.workspace = true
magi-process = { path = "../magi-process" }
tempfile = "3"
