[package]
name = "magi-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }
magi-api = { path = "../magi-api" }
magi-agent-role = { path = "../magi-agent-role" }
magi-bridge-client = { path = "../magi-bridge-client" }
magi-context-runtime = { path = "../magi-context-runtime" }
magi-core = { path = "../magi-core" }
magi-conversation-runtime = { path = "../magi-conversation-runtime" }
magi-event-bus = { path = "../magi-event-bus" }
magi-governance = { path = "../magi-governance" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-lifecycle-notice = { path = "../magi-lifecycle-notice" }
magi-memory-store = { path = "../magi-memory-store" }
magi-mission = { path = "../magi-mission" }
magi-mission-metrics = { path = "../magi-mission-metrics" }
magi-orchestrator = { path = "../magi-orchestrator" }
magi-session-store = { path = "../magi-session-store" }
magi-skill-runtime = { path = "../magi-skill-runtime" }
magi-snapshot = { path = "../magi-snapshot" }
magi-tool-runtime = { path = "../magi-tool-runtime" }
magi-worker-runtime = { path = "../magi-worker-runtime" }
magi-workspace = { path = "../magi-workspace" }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3"
magi-checkpoint = { path = "../magi-checkpoint" }
magi-mission-charter = { path = "../magi-mission-charter" }
magi-plan = { path = "../magi-plan" }
