[package]
name = "magi-knowledge-store"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1"
regex = "1"
flate2 = "1"
magi-core = { path = "../magi-core" }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
