[package]
name = "magi-lifecycle-notice"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
magi-core = { path = "../magi-core" }
magi-event-bus = { path = "../magi-event-bus" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
