[package]
name = "magi-mission-metrics"
version.workspace = true
edition.workspace = true

# Mission 维度记账（token / wall-clock / turn）。
# sidecar 文件：`<magi_home>/projects/<slug>/missions/<mission_id>/metrics.md`。
[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
magi-core = { path = "../magi-core" }

[dev-dependencies]
tempfile = "3"
