[package]
name = "magi-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
magi-event-bus = { path = "../magi-event-bus" }
magi-core = { path = "../magi-core" }
magi-agent-role = { path = "../magi-agent-role" }
magi-worker-runtime = { path = "../magi-worker-runtime" }
magi-tool-runtime = { path = "../magi-tool-runtime" }
magi-skill-runtime = { path = "../magi-skill-runtime" }
magi-context-runtime = { path = "../magi-context-runtime" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-memory-store = { path = "../magi-memory-store" }
magi-bridge-client = { path = "../magi-bridge-client" }
magi-governance = { path = "../magi-governance" }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
