[package]
name = "magi-snapshot"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
notify.workspace = true
sha2.workspace = true
zstd.workspace = true
ignore.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile = "3"
