[package]
name = "magi-todo-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
magi-core = { path = "../magi-core" }
magi-event-bus = { path = "../magi-event-bus" }
magi-session-store = { path = "../magi-session-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
