[package]
name = "magi-tool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
magi-core = { path = "../magi-core" }
magi-event-bus = { path = "../magi-event-bus" }
magi-governance = { path = "../magi-governance" }
magi-knowledge-store = { path = "../magi-knowledge-store" }
magi-permissions = { path = "../magi-permissions" }
magi-process = { path = "../magi-process" }
reqwest = { workspace = true, features = ["blocking"] }
regex = "1"
urlencoding = "2"
base64 = "0.22"
encoding_rs = "0.8"
dirs = "6"
tracing.workspace = true
